client - admin - user jwt implementation